# tsumeshogi-web-solver

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build-wasm.sh  flake.nix
.cargo/: config.toml
.github/workflows/: gh-pages.yml  rust.yml  test-ts.yml
codex-notes/issue-35-pre-commit-config/: plan.md  research.md
codex-notes/wasm-size-shrink/: plan.md  research.md
src/: lib.rs
www/: .gitignore  Makefile  dependency_graph.dot  eslint.config.mjs  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/src/: App.css  branch_selector.tsx  branches.ts  index.tsx  kif_parse.ts  kif_url.test.ts  kif_url.ts  proxy_fetch.ts  sfen.ts  solve.ts  whole_player.tsx  worker.js  worker.ts
