[package]
repository = "https://github.com/koba-e964/tsumeshogi-web-solver"
name = "tsumeshogi-web-solver"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.74"

[features]

[dependencies]
serde = { version = "1", features = ["derive"] }
shogi_core = "0.1.4"
shogi_usi_parser = "0.1.0"
shogi_official_kifu = "0.1.1"
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6"
wasm-timer = "0.2.5"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"
# https://zenn.dev/dozo/articles/55d793d97157e8
# https://github.com/rustwasm/wasm-bindgen/issues/2215#issuecomment-796244209
parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }
mate_solver = { git = "https://github.com/rust-shogi-crates/shogi_mate_solver", branch = "wasm-support" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"]} # this crate doesn't depend on it directly, but it needs `wasm_js` feature

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.3" }


[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O', '--debuginfo']
