[package]
repository = "https://github.com/koba-e964/tsumeshogi-web-solver"
name = "tsumeshogi-web-solver"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.74"

[features]

[dependencies]
serde = { version = "1", features = ["derive"] }
shogi_core = "0.1.4"
shogi_usi_parser = "0.1.0"
shogi_official_kifu = "0.1.1"
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4.45"
mate_solver = { git = "https://github.com/rust-shogi-crates/shogi_mate_solver" }

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O', '--debuginfo']
